tests/invalid/resolver/expected_type.out
tests/failing/resolver/expected_type.ri:3:9: error: expected type, found function
    |
  3 | fn x(a: my_fn) {}
    |         ^
rivetc: error: could not compile package `core`, aborting due to previous error